docs/api/qiskit/0.24/qiskit.aqua.components.multiclass_extensions.AllPairs.mdx
---
title: AllPairs
description: API reference for qiskit.aqua.components.multiclass_extensions.AllPairs
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.components.multiclass_extensions.AllPairs
---

<span id="qiskit-aqua-components-multiclass-extensions-allpairs" />

# qiskit.aqua.components.multiclass\_extensions.AllPairs

<Class id="qiskit.aqua.components.multiclass_extensions.AllPairs" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.8/qiskit/aqua/components/multiclass_extensions/all_pairs.py" signature="AllPairs">
  The All-Pairs multiclass extension.

  In the **all-pairs** reduction, one trains $k(k−1)/2$ binary classifiers for a $k$-way multiclass problem; each receives the samples of a pair of classes from the original training set, and must learn to distinguish these two classes. At prediction time, a **weighted voting scheme** is used: all $k(k−1)/2$ classifiers are applied to an unseen sample, and each class gets assigned the sum of all the scores obtained by the various classifiers. The combined classifier returns as a result the class getting the highest value.

  ### \_\_init\_\_

  <Function id="qiskit.aqua.components.multiclass_extensions.AllPairs.__init__" name="__init__" signature="__init__()">
    Initialize self. See help(type(self)) for accurate signature.
  </Function>

  ## Methods

  |                                                                                                                                                                                          |                                                                                                                                                                                                                                         |
  | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.aqua.components.multiclass_extensions.AllPairs.__init__ "qiskit.aqua.components.multiclass_extensions.AllPairs.__init__")()                                         | Initialize self.                                                                                                                                                                                                                        |
  | [`predict`](#qiskit.aqua.components.multiclass_extensions.AllPairs.predict "qiskit.aqua.components.multiclass_extensions.AllPairs.predict")(x)                                           | Applying multiple estimators for prediction.                                                                                                                                                                                            |
  | [`set_estimator`](#qiskit.aqua.components.multiclass_extensions.AllPairs.set_estimator "qiskit.aqua.components.multiclass_extensions.AllPairs.set_estimator")(estimator\_cls\[, params]) | Called internally to set `Estimator` and parameters :type estimator\_cls: `Callable`\[\[`List`], `Estimator`] :param estimator\_cls: An `Estimator` class :type params: `Optional`\[`List`] :param params: Parameters for the estimator |
  | [`test`](#qiskit.aqua.components.multiclass_extensions.AllPairs.test "qiskit.aqua.components.multiclass_extensions.AllPairs.test")(x, y)                                                 | Testing multiple estimators each for distinguishing a pair of classes.                                                                                                                                                                  |
  | [`train`](#qiskit.aqua.components.multiclass_extensions.AllPairs.train "qiskit.aqua.components.multiclass_extensions.AllPairs.train")(x, y)                                              | Training multiple estimators each for distinguishing a pair of classes.                                                                                                                                                                 |

  ### predict

  <Function id="qiskit.aqua.components.multiclass_extensions.AllPairs.predict" name="predict" signature="predict(x)">
    Applying multiple estimators for prediction.

    **Parameters**

    **x** (*numpy.ndarray*) – NxD array

    **Returns**

    predicted labels, Nx1 array

    **Return type**

    numpy.ndarray
  </Function>

  ### set\_estimator

  <Function id="qiskit.aqua.components.multiclass_extensions.AllPairs.set_estimator" name="set_estimator" signature="set_estimator(estimator_cls, params=None)">
    Called internally to set `Estimator` and parameters :type estimator\_cls: `Callable`\[\[`List`], `Estimator`] :param estimator\_cls: An `Estimator` class :type params: `Optional`\[`List`] :param params: Parameters for the estimator

    **Return type**

    `None`
  </Function>

  ### test

  <Function id="qiskit.aqua.components.multiclass_extensions.AllPairs.test" name="test" signature="test(x, y)">
    Testing multiple estimators each for distinguishing a pair of classes.

    **Parameters**

    *   **x** (*numpy.ndarray*) – input points
    *   **y** (*numpy.ndarray*) – input labels

    **Returns**

    accuracy

    **Return type**

    float
  </Function>

  ### train

  <Function id="qiskit.aqua.components.multiclass_extensions.AllPairs.train" name="train" signature="train(x, y)">
    Training multiple estimators each for distinguishing a pair of classes.

    **Parameters**

    *   **x** (*numpy.ndarray*) – input points
    *   **y** (*numpy.ndarray*) – input labels

    **Raises**

    **ValueError** – can not be fit when only one class is present.
  </Function>
</Class>

